--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-poppop": "^1.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-skylight": "^0.5.1",
